# kalshi-bot

./: .gitignore  CLAUDE.md  flake.nix  pyproject.toml  spec.md  trade.py
src/kalshi_bot/: __init__.py  analytics.py  client.py  engine.py  events.py  models.py  persistence.py  portfolio.py  risk.py  runner.py  strategy.py  tui.py
tests/: conftest.py  test_analytics.py  test_client.py  test_engine.py  test_events.py  test_models.py  test_persistence.py  test_portfolio.py  test_risk.py  test_runner.py  test_strategy.py  test_tui.py
