[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kalshi-bot"
version = "0.1.0"
description = "Paper trading bot for Kalshi prediction markets"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
kalshi-bot = "kalshi_bot.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
